# LingCore

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
lingcore/: __init__.py  __main__.py  agent.py  composer.py  config.py  doctor.py  errors.py  events.py  guardrails.py  ingest.py  knowledge.py  llm.py  media.py  media_types.py  memory.py  message.py  modality.py  paths.py  sessions.py  skills.py
lingcore/io/: __init__.py  base.py  cli.py
lingcore/profiles/: coding.yaml  coding_ollama.yaml
lingcore/profiles/coding/: config.yaml  role.md  workflow.md  world.md
lingcore/profiles/coding_ollama/: config.yaml
lingcore/profiles/daily/: config.yaml  world.md
lingcore/profiles/teaching/: config.yaml  workflow.md  world.md
lingcore/skills/canvas/: .env.example  canvas_tools.py  skill.md
lingcore/skills/code-review/: skill.md
lingcore/tools/: __init__.py
lingcore/tools/builtin/: __init__.py  _offload.py  fs.py  knowledge.py  memory.py  patch.py  pdf.py  shell.py  skill.py  web.py
profiles/coding/: .env.example  config.yaml  world.md
profiles/coding_ollama/: config.yaml
profiles/daily/: .env.example  config.yaml  role.md  workflow.md
profiles/teaching/: .env.example  config.yaml  role.md
tests/: fakes.py  test_agent.py  test_canvas_skill.py  test_cli.py  test_cli_sessions.py  test_compaction.py  test_composer.py  test_config.py  test_doctor.py  test_ingest.py  test_knowledge.py  test_knowledge_provider.py  test_llm.py  test_media.py  test_memory.py  test_memory_tool.py  test_message.py  test_modality.py  test_patch.py  test_sessions.py  test_shell.py  test_skill_loop.py  test_skill_tools.py  test_skills.py  test_tools.py  test_web.py
