[project]
name = "lingcore"
version = "0.0.1"
description = "A lightweight, config-driven async agent framework"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "openai==2.41.0",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "tiktoken==0.13.0",
    "rich==15.0.0",
    "httpx==0.28.1",
]

[project.scripts]
lingcore = "lingcore.__main__:main"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lingcore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
